float_eq/tests/derive_tests/ulps_epsilon/ulps_epsilon_generic.stderr
error: This trait does not yet support derive for generic types.
 --> $DIR/ulps_epsilon_generic.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsEpsilon)]
  |                                         ^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
